<resources>
    <string name="app_name">EbayRevised</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="deals">deals</string>
    <string name="categories">categories</string>
    <string name="search_for_anything">Search for anything</string>
    <string name="sign_in_so_we_can_personalize_your_ebay_experience">Sign in so we can personalize your eBay experience</string>
    <string name="sign_in">sign in</string>
    <string name="register">Register</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="home">Home</string>
    <string name="my_ebay">My eBay</string>
    <string name="watching">Watching</string>
    <string name="purchases">Purchases</string>
    <string name="bids_offers"><![CDATA[Bids & Offers]]></string>
    <string name="selling">Selling</string>
    <string name="saved">Saved</string>
    <string name="you_can_use_your_email_or_username_or_continue_with_your_social_account">You can use your email or username, or continue with your social account.</string>
    <string name="use_email_or_username">USE EMAIL OR USERNAME</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="enter_your_first_name">Enter your first name:</string>
    <string name="enter_your_last_name">Enter your Last name:</string>
    <string name="enter_your_address">Enter your address:</string>
    <string name="enter_your_email">Enter your email:</string>
    <string name="create_new_password">Create new password:</string>
    <string name="str_successfully_registered">successfully registered</string>
    <string name="user_name">User name :</string>
    <string name="password">Password:</string>
    <string name="buttonlogin">buttonLogin</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number">Enter your mobile number :</string>
    <string name="name">name</string>
    <string name="id">id</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_mobile_number">Enter mobile number :</string>
    <string name="enter_current_password">Enter current password:</string>
    <string name="enter_new_password">Enter new password :</string>
    <string name="pname">pname</string>
    <string name="prize">Prize</string>
    <string name="cart">Cart</string>
    <string name="discription">Discription</string>
    <string name="order_id">Order Id:</string>
    <string name="order_status">Order Status:</string>
    <string name="name1">Name:</string>
    <string name="delivery_address">Delivery address:</string>
    <string name="mobile1">Mobile :</string>
    <string name="email1">Email:</string>
    <string name="item_id">Item Id:</string>
    <string name="item_name">Item Name:</string>
    <string name="total_price">Total Price :</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="paid_price">Paid Price</string>
    <string name="placed_on">Placed on :</string>
    <string name="billing_address">Billing Address</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_amount">Total Amount:</string>
    <string name="card_number">Card Number:</string>
    <string name="expiry_month">Expiry Month:</string>
    <string name="expiry_year">Expiry Year:</string>
    <string name="cvc_number">CVC Number</string>
    <string name="pay">Pay</string>
    <string name="delete_item_from_cart">Delete Item from Cart</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total :</string>
    <string name="total_amount1">Total Amount :</string>
    <string name="summary">Summary</string>

</resources>
