<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#f7f3f3"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconSearchBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_black_24dp" />

        <EditText
            android:id="@+id/editTextSearchBox"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="65dp"
            android:background="#F7F3F3"
            android:hint="@string/search_for_anything"
            android:padding="18dp" />

        <ImageView
            android:id="@+id/iconMic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_mic_black_24dp" />

        <ImageView
            android:id="@+id/iconCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_alt_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/buttonSelling"
            style="@style/CategoryButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selling" />

        <Button
            android:id="@+id/buttonDeals"
            style="@style/CategoryButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deals" />

        <Button
            android:id="@+id/buttonCategories"
            style="@style/CategoryButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories" />

        <Button
            android:id="@+id/buttonSaved"
            style="@style/CategoryButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="114dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="74dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/sign_in_so_we_can_personalize_your_ebay_experience"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="165dp"
        android:layout_height="51dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="29dp"
        android:background="@android:color/white"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="165dp"
        android:layout_height="51dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="177dp"
        android:background="@android:color/white"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</android.support.constraint.ConstraintLayout>