<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewCartName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pname"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textViewCartPrize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prize"
                android:textSize="19sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewCartDiscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discription"
                android:textColor="@android:color/black"/>

        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_minus" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:id="@+id/textViewItemQuantity"
            android:gravity="center"/>

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_plus" />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDeleteItemFromCart"
        android:text="@string/delete_item_from_cart"
        style="@style/CategoryButtons"/>
    <Button
        android:id="@+id/buttonCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Checkout"
        style="@style/CategoryButtons"/>
</LinearLayout>
</LinearLayout>